--- a/examples/steps.html
+++ b/examples/steps.html
@@ -20,14 +20,12 @@
 <body>
   <br><br><br>
   <br><br><br>
-  <script>
-    var slider = new $add.SliderObj({
-      min: 0,
-      max: 10,
-      value: 2
-    });
-    slider.render("body", "append");
-    slider.render("body", "append");
-  </script>
+  <input
+    data-addui='slider'
+    data-step='1'
+    data-min='1'
+    data-max='10'
+    value='5'
+  />
 </body>
 </html>
