--- a/examples/vertical-range.html
+++ b/examples/vertical-range.html
@@ -20,14 +20,16 @@
 <body>
   <br><br><br>
   <br><br><br>
-  <script>
-    var slider = new $add.SliderObj({
-      min: 0,
-      max: 10,
-      value: 2
-    });
-    slider.render("body", "append");
-    slider.render("body", "append");
-  </script>
+  <div style='height: 400px'>
+    <input
+      data-addui='slider'
+      data-direction='vertical'
+      data-range='true'
+      data-min='20'
+      data-max='40'
+      data-step='0.5'
+      value='25,35'
+    />
+  </div>
 </body>
 </html>
