--- a/examples/vertical.html
+++ b/examples/vertical.html
@@ -20,14 +20,12 @@
 <body>
   <br><br><br>
   <br><br><br>
-  <script>
-    var slider = new $add.SliderObj({
-      min: 0,
-      max: 10,
-      value: 2
-    });
-    slider.render("body", "append");
-    slider.render("body", "append");
-  </script>
+  <div style='height: 300px'>
+    <input
+      data-addui='slider'
+      data-direction='vertical'
+    />
+  </div>
+  
 </body>
 </html>
