--- a/examples/regular.html
+++ b/examples/regular.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='../src/addSlider.css' />
   <script src='../res/jquery.js'></script>
   <script src='../res/Obj.min.js'></script>
@@ -8,10 +9,11 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
+      padding: 16px;
       width: 100vw;
       max-width: 100%;
       overflow-x: hidden;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -20,10 +22,6 @@
   <br><br><br>
   <input
     data-addui='slider'
-    data-step='1'
-    data-min='1'
-    data-max='10'
-    value='5'
   />
 </body>
 </html>
