--- a/examples/usd.html
+++ b/examples/usd.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='../src/addSlider.css' />
   <script src='../res/jquery.js'></script>
   <script src='../res/Obj.min.js'></script>
@@ -24,10 +25,11 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
+      padding: 16px;
       width: 100vw;
       max-width: 100%;
       overflow-x: hidden;
+      box-sizing: border-box;
     }
   </style>
 </head>
